--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=zzoom
+spring.application.name=zzoom-master
 server.port=80
 
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
